--- a/src/app/master/wiretrans/wiretransm-search/wiretransm-search.component.html
+++ b/src/app/master/wiretrans/wiretransm-search/wiretransm-search.component.html
@@ -15,7 +15,7 @@
         </div>
       </div>
       <div class="form-group row">
-        <label class="col-sm-4 form-label form-label-sm" for="">Quote #</label>
+        <label class="col-sm-4 form-label form-label-sm" for="">Ref #</label>
         <div class="col-sm-8">
           <app-input type="text" formControlName="wtim_refno"> </app-input>
         </div>
