--- a/src/app/master/wiretransm/wiretransm-edit/wiretransm-edit.component.html
+++ b/src/app/master/wiretransm/wiretransm-edit/wiretransm-edit.component.html
@@ -13,7 +13,7 @@
           <label class="col-sm-4 form-label form-lable-sm" for="">RefNo</label>
           <div class="col-sm-8">
             <app-input maxlength="15" formControlName="wtim_refno" [case]="'UPPER'" id="wtim_refno" name="wtim_refno"
-            [disable]="true" required></app-input>
+            [disable]="true"></app-input>
           </div>
         </div>
         
@@ -23,18 +23,11 @@
             <app-input maxlength="15" formControlName="wtim_to_name" [case]="'UPPER'" required></app-input>
           </div>
         </div>
-
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">Name</label>
-          <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="cust_name" [case]="'UPPER'" required></app-input>
-          </div>
-        </div>
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Company</label>
           <div class="col-sm-8">
             <auto-complete formControlName="wtim_cust_code" id="wtim_cust_code" (CallBack)="callBack($event)"
-              [table]="'customerm'" [company_id]="getCompanyId()" [url]="url"
+              [table]="'customerm'" [company_id]="getCompanyId()" [url]="url" required
               display_column="[{'caption':'CODE','value':'cust_code'},{'caption':'NAME','value':'cust_name'}]"></auto-complete>
           </div>
         </div>
@@ -49,13 +42,13 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Fax</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="wtim_cust_fax" [case]="'UPPER'" required></app-input>
+            <app-input maxlength="100" formControlName="wtim_cust_fax" [case]="'UPPER'" ></app-input>
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">Tel</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="wtim_cust_tel" [case]="'UPPER'" required></app-input>
+            <app-input maxlength="100" formControlName="wtim_cust_tel" [case]="'UPPER'" ></app-input>
           </div>
         </div>
         <div class="form-group row">
@@ -84,21 +77,21 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">Date</label>
           <div class="col-sm-8">
-            <app-date formControlName="wtim_date" [format]="gs.globalConstants.global_date_format"></app-date>
+            <app-date formControlName="wtim_date" [format]="gs.globalConstants.global_date_format" required></app-date>
           </div>
         </div>
 
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">SenderRef#</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="wtim_sender_ref" [case]="'UPPER'" required></app-input>
+            <app-input maxlength="100" formControlName="wtim_sender_ref" [case]="'UPPER'"></app-input>
           </div>
         </div>
 
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">YourRef#</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="wtim_your_ref" [case]="'UPPER'" required></app-input>
+            <app-input maxlength="100" formControlName="wtim_your_ref" [case]="'UPPER'"></app-input>
           </div>
         </div>
       </div>
@@ -106,40 +99,20 @@
   </div>
   <div class="page-body">
     <div class="row">
-      <div class="col-sm-12">
+      <label class="col-sm-2 form-label form-lable-sm"></label>
+      <div class="col-sm-10">
         <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for=""></label>
-          <div class="col-sm-8">
+          <div class="col-sm-12">
             <app-checkbox formControlName="wtim_is_urgent" name="wtim_is_urgent" ></app-checkbox>
-             <label class="col-sm-4 form-label form-lable-sm" for="">Urgent</label>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for=""></label>
-          <div class="col-sm-8">
+             <label class="col-sm-2 form-label form-lable-sm" for="">Urgent</label>
             <app-checkbox formControlName="wtim_is_review" name="wtim_is_review" ></app-checkbox>
-             <label class="col-sm-4 form-label form-lable-sm" for="">Review</label>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for=""></label>
-          <div class="col-sm-8">
+             <label class="col-sm-2 form-label form-lable-sm" for="">Review</label>
             <app-checkbox formControlName="wtim_is_comment" name="wtim_is_comment" ></app-checkbox>
-             <label class="col-sm-4 form-label form-lable-sm" for="">Comment</label>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for=""></label>
-          <div class="col-sm-8">
+             <label class="col-sm-2 form-label form-lable-sm" for="">Comment</label>
             <app-checkbox formControlName="wtim_is_reply" name="wtim_is_reply" ></app-checkbox>
-             <label class="col-sm-4 form-label form-lable-sm" for="">Reply</label>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for=""></label>
-          <div class="col-sm-8">
+             <label class="col-sm-2 form-label form-lable-sm" for="">Reply</label>
             <app-checkbox formControlName="wtim_is_recycle" name="wtim_is_recycle" ></app-checkbox>
-             <label class="col-sm-4 form-label form-lable-sm" for="">Recycle</label>
+             <label class="col-sm-2 form-label form-lable-sm" for="">Recycle</label>
           </div>
         </div>
       </div>
@@ -160,21 +133,19 @@
               <th>DELETE</th>
             </tr>
           </thead>
-
           <tbody formArrayName="wtim_details">
             <tr *ngFor="let iRow of formArray('wtim_details').controls; let i=index;" [formGroupName]="i">
               <td *ngIf="showModel">
                 <label>{{iRow.get('wtid_id')?.value}}</label>
               </td>
-
               <td>
                 <auto-complete formControlName="wtid_benef_name" id="wtid_benef_name" name="wtid_benef_name" (CallBack)="callBack($event)"
-              [table]="'customerm'" [company_id]="getCompanyId()" [url]="url"
+              [table]="'customerm'" [company_id]="getCompanyId()" [url]="url" required
               display_column="[{'caption':'CODE','value':'cust_code'},{'caption':'NAME','value':'cust_name'}]"></auto-complete>
               </td>
               <td>
                 <auto-complete formControlName="wtid_bank_name" id="wtid_bank_name" name="wtid_bank_name" (CallBack)="callBack($event)"
-              [table]="'customerm'" [company_id]="getCompanyId()" [url]="url"
+              [table]="'customerm'" [company_id]="getCompanyId()" [url]="url" required
               display_column="[{'caption':'CODE','value':'cust_code'},{'caption':'NAME','value':'cust_name'}]"></auto-complete>
               </td>
               <td>
@@ -185,7 +156,7 @@
                 <app-input maxlength="100" formControlName="wtid_trns_amt" [rowIndex]="i" name="wtid_trns_amt" 
                 [dec]="gs.globalConstants.global_dec_places" type="number" case="UPPER"></app-input>
               </td>
-              <td>
+              
               <td align="centre" (click)="addDetails()" class="link">
                 <i class="fa fa-plus"></i>
               </td>
@@ -200,7 +171,7 @@
     </div>
     <div class="row" *ngIf="formArray('wtim_details').length <= 0">
       <div class="col-sm-12 text-center">
-        <button class="btn btn-sm btn-info" (click)="addDetails()" [disabled]="mform.invalid">Add Contact</button>
+        <button class="btn btn-sm btn-info" (click)="addDetails()" [disabled]="mform.invalid">Add Details</button>
       </div>
     </div>
   </div>
@@ -208,7 +179,7 @@
     <div class="row">
       <div class="col-sm-12">
         <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">Remarks</label>
+          <label class="col-sm-3 form-label form-lable-sm" for="">Remarks</label>
           <div class="col-sm-8">
             <app-input maxlength="15" formControlName="wtim_remarks" [case]="'UPPER'" id="wtim_refno"
              name="wtim_remarks" ></app-input>
