--- a/src/app/master/wiretransm/wiretransm-search/wiretransm-search.component.html
+++ b/src/app/master/wiretransm/wiretransm-search/wiretransm-search.component.html
@@ -17,7 +17,7 @@
       <div class="form-group row">
         <label class="col-sm-4 form-label form-label-sm" for="">Ref #</label>
         <div class="col-sm-8">
-          <app-input type="text" formControlName="wtim_refno"> </app-input>
+          <app-input type="text" formControlName="wtim_refno" [case]="'UPPER'"> </app-input>
         </div>
       </div>
 
