--- a/src/app/user-admin/mailserverm/mailserverm-edit/mailserverm-edit.component.html
+++ b/src/app/user-admin/mailserverm/mailserverm-edit/mailserverm-edit.component.html
@@ -70,7 +70,7 @@
         <div class=" form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Smtp Password</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="mail_smtp_pwd" [case]="'upper'"></app-input>
+            <app-input maxlength="100" formControlName="mail_smtp_pwd" ></app-input>
           </div>
         </div>
       </div>
