--- a/src/app/marketing1/qtnmfcl/qtnmfcl-edit/qtnmfcl-edit.component.html
+++ b/src/app/marketing1/qtnmfcl/qtnmfcl-edit/qtnmfcl-edit.component.html
@@ -77,7 +77,7 @@
           <label class="col-sm-4 form-label form-lable-sm">Sales Rep.</label>
           <div class="col-sm-8">
             <auto-complete formControlName="qtnm_salesman_name" name="qtnm_salesman_name" id="qtnm_salesman_name"
-              (CallBack)="callBack($event)" table="param" subtable="salesman" [company_id]="getCompanyId()" [url]="url"
+              (CallBack)="callBack($event)" table="param" subtable="SALESMAN" [company_id]="getCompanyId()" [url]="url"
               case="upper" required
               display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
           </div>
