--- a/src/app/master/wiretransm/wiretransm-search/wiretransm-search.component.html
+++ b/src/app/master/wiretransm/wiretransm-search/wiretransm-search.component.html
@@ -7,11 +7,11 @@
       <div class="form-group row">
         <label class="col-sm-4 form-label form-label-sm" for="" >From</label>
         <div class="col-sm-3">
-          <app-date formControlName="wtim_from_date" [format]="gs.globalConstants.global_date_format" placeholder="mm/dd/yyyy"></app-date>
+          <app-date formControlName="wtim_from_date" [format]="gs.globalConstants.global_date_format" [placeholder]="gs.globalConstants.global_date_format"></app-date>
         </div>
         <label class="col-sm-2 form-label form-label-sm" for="">To</label>
         <div class="col-sm-3">
-          <app-date type="text" formControlName="wtim_to_date" [format]="gs.globalConstants.global_date_format" placeholder="mm/dd/yyyy"> </app-date>
+          <app-date type="text" formControlName="wtim_to_date" [format]="gs.globalConstants.global_date_format"  [placeholder]="gs.globalConstants.global_date_format"> </app-date>
         </div>
       </div>
       <div class="form-group row">
